stock_portfolio : Quick add new account implemented, working on quick add add stock ::::: daily commit project 06-07-2022

--- a/stock_portfolio_frontend/pubspec.yaml
+++ b/stock_portfolio_frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
   http: ^0.13.4
+  dropdown_search: ^5.0.2
 
 dev_dependencies:
   flutter_test:
