--- a/stock_portfolio_frontend/pubspec.yaml
+++ b/stock_portfolio_frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
       path: plugins/window_size
   http: ^0.13.4
   dropdown_search: ^5.0.2
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
