--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-cryptography==1.1
 django-environ==0.8.1
 django-filter==21.1
 djangorestframework==3.13.1
+gunicorn==20.1.0
 idna==3.3
 Markdown==3.3.7
 pycparser==2.21
