--- a/stock_portfolio_frontend/pubspec.yaml
+++ b/stock_portfolio_frontend/pubspec.yaml
@@ -43,10 +43,17 @@ dependencies:
   http: ^0.13.4
   dropdown_search: ^5.0.2
   google_fonts: ^3.0.1
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  ios: true
+  macos: true
+  image_path: "img/icon.jpeg"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,7 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - img/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
